--- a/finance_vbo_time_series (1).ipynb
+++ b/finance_vbo_time_series (1).ipynb
@@ -1442,7 +1442,7 @@
     {
       "cell_type": "code",
       "source": [
-        "bist100_decompose = seasonal_decompose(bist100_close, model='additive',period=65) # verileri 3 aylık periyotlara böldük(hafta sonları dahil değil)"
+        "bist100_decompose = seasonal_decompose(bist100_close, model='additive',period=65) # we divided the data into 3-month periods (weekends not included)"
       ],
       "metadata": {
         "id": "YNTWMCTyZVOb"
@@ -2278,7 +2278,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**tarih verilerinden öznitelik çıkarımı yapan fonksiyonu hazırlayalım.**"
+        "**Let's prepare the function that extracts features from date data.**"
       ],
       "metadata": {
         "id": "iS23lucElA-s"
@@ -2733,7 +2733,7 @@
       "cell_type": "code",
       "source": [
         "sns.heatmap((df.drop([\"scaled_close\",\"date\"],axis=1)).corr(),annot=True)\n",
-        "plt.title('Isı harita üzerinde değişkenlerin korelasyon katsayıları')\n",
+        "plt.title('Distributions of variables on the heat map')\n",
         "plt.show()\n",
         "plt.savefig('df_cor.jpg')"
       ],
